--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifolio</title>
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <!--  Css -->
     <!---->
     <!-- icons -->
@@ -30,7 +31,6 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;700&display=swap"
       rel="stylesheet"
     />
-    <script src="core.js"></script>
   </head>
 
   <body>
@@ -54,15 +54,17 @@
       </header>
 
       <div class="boas-vindas">
+        
         <h4 class="cor-text-secundario">Olá, sou</h4>
         <h1 id="txt">
-          Matheus <span class="cor-text-secundario">Claubert</span>
-        </h1>
+          <p>Matheus <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+       </h1>
         <h3>Que tal um café ? ☕</h3 >
         <div>
-          <a href="https://www.linkedin.com/in/matheus-claubert-8613b0152" class="btn">Linkedin</a>
-          <a href="https://github.com/MatheusClaubert" class="btn">Github</a>
-          <a href="https://contate.me/dev-matheusclaubert"class="btn">Whatsapp</a>
+        </div>
+          <a href="https://www.linkedin.com/in/matheus-claubert-8613b0152"target="_blank" rel="external" class="btn">Linkedin</a>
+          <a href="https://github.com/MatheusClaubert"target="_blank" rel="external" class="btn">Github</a>
+          <a href="https://contate.me/dev-matheusclaubert"target="_blank" rel="external" class="btn">Whatsapp</a>
         </div>
       </div>
     </div>
@@ -104,15 +106,14 @@
         <!-- card -->
         <div class="card">
           <i class="fa-regular fa-window-maximize"></i>
-          <h5>CRUD HCODE</h5>
+          <h5>Formulário Dartsiders</h5>
           <p>
-            Projeto ofertado pelo curso da Hcode onde construí um crud que
-            consome uma API Restfull utilizando Nodejs.
+            Primeiro formulário simples como prática de estudo.
           </p>
 
           <div>
-            <a href="https://crud-restify.herokuapp.com/" class="btn"
-              >Saiba Mais</a
+            <a href="https://cranky-liskov-458692.netlify.app/"target="_blank" rel="external" class="btn"
+              >Visualizar</a
             >
           </div>
         </div>
@@ -124,8 +125,8 @@
             Crud pessoal utilizando NodeJs, Express e MongoDb.
           </p>
           <div>
-            <a href="https://crud-restify.herokuapp.com/" class="btn"
-              >Saiba Mais</a
+            <a href="https://crud-dartsiders.herokuapp.com/"target="_blank" rel="external"class="btn"
+              >Visualizar</a
             >
           </div>
         </div>
@@ -171,6 +172,6 @@
         <li></li>
       </ul>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
