--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             React.js, consumo de APIs Rest Sou apaixonado por tecnologia, desenvolvimento, 
             jogos e musicas. Tenho muita sede por aprendizado e estou diariamente me colocando em desafios para evoluir meu aprendizado
           </p>
-          <a href="curriculo/MatheusClaubert.pdf" class="btn">
+          <a href="curriculo/Matheus Claubert – Junior Web Developer · Resume.io (1).pdf" class="btn">
             <i class="fa-solid fa-download"></i>
             Download Curriculo</a
           >
