--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
 
   <body>
     <div class="background">
-      <header>
+      <header class="header">
         <div class="menu">
-          <div>
-            <h2 id="logo">
-              Portifo<span class="cor-text-secundario">lio</span>
-            </h2>
-          </div>
+          <a href="#">
+            <div>
+              <h2 id="logo">
+            
+                Portifo<span class="cor-text-secundario">lio</span>
+              </h2>
+            </div>
+          </a>
 
           <nav>
             <ul class="nav-list">
@@ -87,7 +90,7 @@
             React.js, consumo de APIs Rest Sou apaixonado por tecnologia, desenvolvimento, 
             jogos e musicas. Tenho muita sede por aprendizado e estou diariamente me colocando em desafios para evoluir meu aprendizado
           </p>
-          <a href="curriculo/Matheus Claubert – Junior Web Developer · Resume.io (1).pdf" class="btn">
+          <a href="curriculo/Matheus Claubert-SD .pdf" target="_blank" rel="external" class="btn">
             <i class="fa-solid fa-download"></i>
             Download Curriculo</a
           >
@@ -135,11 +138,11 @@
           <i class="fa-regular fa-window-maximize"></i>
           <h5>Pokédex Pokemon</h5>
           <p>
-            Pokédex em fase de construção. (Em breve disponível)
+            Pokédex utilizando a PokéAPI com 649 Pokémons
           </p>
 
           <div>
-            <a class="btn">Indisponível</a>
+            <a href="https://pokedexdart.netlify.app/"target="_blank" rel="external"class="btn">Visualizar</a>
           </div>
         </div>
       </div>
@@ -150,7 +153,7 @@
       <p id="aspas">
         <i class="fa-solid fa-quote-left cor-text-secundario"></i>
       </p>
-      <p id="texto">Você pode criar qualquer coisa: basta escrever.</p>
+      <p id="texto">Sinto mil capacidades brotarem em mim.</p>
     </section>
  
     <!--  Rodape -->
