--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             React.js, consumo de APIs Rest Sou apaixonado por tecnologia, desenvolvimento, 
             jogos e musicas. Tenho muita sede por aprendizado e estou diariamente me colocando em desafios para evoluir meu aprendizado
           </p>
-          <a href="curriculo/Matheus Claubert-SD .pdf" target="_blank" rel="external" class="btn">
+          <a href="curriculo/Matheus Claubert -Front-end.pdf" target="_blank" rel="external" class="btn">
             <i class="fa-solid fa-download"></i>
             Download Curriculo</a
           >
