atualização de foto

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section id="sobre">
       <div class="main">
         <figure>
-          <img src="imagens/eu.jpg" alt="" style="border-radius: 1em" />
+          <img src="imagens/DSCF0389.JPG" alt="" style="border-radius: 1em" />
         </figure>
 
         <div class="sobre-texto">
